# Calculator

./: .env  .gitignore  CMakeLists.txt  Cargo.toml  README.md  calc_app  calculator.cpp  calculator.h  main.cpp  package-lock.json  package.json
include/: Calculator.hpp  Evaluator.hpp  LogSB.hpp  McpIO.hpp  Parser.hpp
mcp/: McpIO.cpp
src/: Calculator.cpp  Evaluator.cpp  LogSB.cpp  Parser.cpp  calc_app  lib.rs  main.cpp
src/calc_app.dSYM/Contents/: Info.plist
src/calc_app.dSYM/Contents/Resources/DWARF/: calc_app
src/calc_app.dSYM/Contents/Resources/Relocations/aarch64/: calc_app.yml
supabase/: config.toml
